--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.21'
-    ext.gradle_version = '3.3.2'
+    ext.kotlin_version = '1.4.0'
+    ext.gradle_version = '4.1.3'
+
     repositories {
         google()
         jcenter()
@@ -20,7 +21,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url "http://jitpack.io/" }
+
+        maven { url "https://maven.google.com" }
+        maven { url "https://www.jitpack.io" }
     }
 }
 
